# rapid-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/rapid/: Cargo.toml  build.rs
crates/rapid-compat-tests/: Cargo.toml
crates/rapid-compat-tests/interop/: capture_trace.sh  four_node_ctrl_c.sh  mixed_cluster.sh
crates/rapid-compat-tests/interop/docker/: Dockerfile.java  Dockerfile.rust  docker-compose.yml  run.sh  verify_cluster.sh
crates/rapid-compat-tests/src/: lib.rs  ndjson.rs
crates/rapid-compat-tests/tests/: ndjson_replay.rs  probe_interop.rs  wire_roundtrip.rs  xxh64_micro.rs
crates/rapid-compat-tests/vectors/: view_v0.txt  wire_v0.txt
crates/rapid-example/: Cargo.toml
crates/rapid-example/src/: main.rs
crates/rapid-loom-tests/: Cargo.toml
crates/rapid-loom-tests/src/: lib.rs
crates/rapid-shard/: Cargo.toml  README.md
crates/rapid-shard/src/: lib.rs
crates/rapid-shard/tests/: pattern_b.rs
crates/rapid-soak/: Cargo.toml
crates/rapid-soak/src/: main.rs
crates/rapid/fuzz/: Cargo.toml
crates/rapid/fuzz/fuzz_targets/: rapid_request_decode.rs
crates/rapid/src/: clock.rs  cluster_join.rs  cut_detector.rs  error.rs  events.rs  lib.rs  metadata.rs  pb.rs  proto_traits.rs  ring.rs  settings.rs  types.rs  view.rs  view_hash.rs
crates/rapid/src/cluster/: bootstrap.rs  builder.rs  handle.rs  mod.rs
crates/rapid/src/consensus/: fast_paxos.rs  mod.rs  paxos.rs
crates/rapid/src/messaging/: broadcaster.rs  fault_injection.rs  grpc.rs  handler.rs  in_process.rs  lazy_handler.rs  mod.rs  timed_client.rs  traits.rs
crates/rapid/src/monitoring/: factory.rs  mod.rs  no_op.rs  ping_pong.rs  static_fd.rs
crates/rapid/src/service/: alert_batcher.rs  alert_handler.rs  command.rs  consensus_dispatch.rs  fd_scheduler.rs  handle.rs  handler.rs  handlers.rs  mod.rs  state.rs  task.rs  view_change.rs
crates/rapid/tests/: alert_pipeline_phase3b.rs  cluster_phase3a.rs  cluster_test_f11.rs  cluster_test_f11_rejoin.rs  cluster_test_f2.rs  cluster_test_phase7.rs  consensus_phase4.rs  custom_transport.rs  cut_detector_link_invalidation.rs  fast_paxos_jitter.rs  fast_paxos_without_fallback_ported.rs  fault_injection_smoke.rs  grpc_convergence_f1.rs  grpc_smoke.rs  initial_view_event.rs  mailbox_backpressure.rs  membership_view_ported.rs  messaging_in_process.rs  paxos_coordinator_rule.rs  paxos_parametric_ported.rs  paxos_recovery_ported.rs  pre_start_subscription.rs  proposal_ringzero_order.rs  proptest_view.rs  shutdown_no_leak.rs  view_change_phase3c.rs
crates/rapid/tests/common/: cluster_harness.rs  direct_paxos_bus.rs  mod.rs
docs/: k-h-l.md  rapid_java.md  rapid_summary.md
tools/dump-vectors/: Micro.java  ViewDump.java  WireDump.java
tools/patches/rapid-java/: 01-rapid-rs-interop.patch  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
