[package]
name = "rapid-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
rapid = { path = "../rapid" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "rapid-example"
path = "src/main.rs"
